2006-03-05  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Fix sound-on-login-success and failure to only
	  play if they are turned on.  Previously they were playing if
	  they were defined to have soundfiles, but not turned on.
	  Fixes bug #333435.

2006-03-03  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.13.0.10: 
	* NEWS: Updated.
	* configure.ac, acconfig.h: Update to 2.13.0.9.  Added code to support
	  the change in gdmconfig.c below.
	* gui/gdmconfig.c: Fix so that if gdm.conf file exists on the system
	  this is used instead of custom.conf.  This makes GDM more backwards
	  compatible and won't break user configuration if the user has an old
	  config file.  

2006-02-28  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.13.0.9: 
	* NEWS: Updated.
	* configure.ac: Update to 2.13.0.9.
	* docs/Makefile.am: Remove "uk" since there is no such
	  subdir yet.

2006-02-27  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_events.c: Small patch that I think
	  will fix core dumping problem reported in bug #332426.

2006-02-24  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmconfig.c: Fix error message that is printed when
	  ServAuthDir isn't owned by root:gid so it says "root:gid"
	  instead of "gdm:gdm", which is wrong.  Cleaned up the 
	  code a bit.

2006-02-24  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmconfig.c, gui/gdmsetup.c: Clean up memory handling.
	
2006-02-21  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_parser.c:  Add new "gtk-theme" property
          to <greeter> tag theme xml format, so the theme can specify a
	  GtkTheme to be used for gdmgreeter.  This allows theming of
	  the "Options" menu and the entry field, and any other GTK+
	  widgets used by gdmgreeter.  This also makes it possible to
	  create a11y themes (HighContrast, LowContrast, etc.) themes
	  for gdmgreeter.

2006-02-16  Brian Cameron  <brian.cameron@sun.com>
